fix dark mode

--- a/side2/dark-stilark.css
+++ b/side2/dark-stilark.css
@@ -41,38 +41,31 @@ body.dark-theme {
     justify-content: center;
 }
 
-.hoveddel {
-    font-size: 2vw;
+.hoveddel{
     text-decoration: none;
     display:flex;
     flex-direction: row;
-}
-
-.hoveddel.dark-theme {
-    font-size: 2vw;
-    text-decoration: none;
-    display:flex;
-    flex-direction: row;
+    
 }
 
 .bokser {
+    font-size: 2vw;
     flex:1;
     margin:50px;
     background-color: white;
     border-radius: 10px;
     padding:20px;
     color:black;
-
 }
 
 .bokser.dark-theme {
+    font-size: 2vw;
     flex:1;
     margin:50px;
     background-color: black;
     border-radius: 10px;
     padding:20px;
     color:white;
-
 }
 
 .bokser:visited {
@@ -98,6 +91,9 @@ body.dark-theme {
 .footer {
     font-size: 2vw;
     text-decoration: none;
+    position: fixed;
+    left:0;
+    bottom:0;
 }
   
   /*a {
